# cpp-mini-project

./: CMakeLists.txt  graphics.cpp  main.cpp  question.cpp  question.h
